test/invalid/MissingColon/MissingColon.plume
/**
 * Missing colon
 * @author 36994, César Santos
 */
class MissingColon extends Object is
  method test () Boolean is
    true